# USB_Writer

./: .gitignore  README.md  launch-usb-writer.sh
.claude/: settings.json
.github/workflows/: build.yml
releases/macos/: BUILD_INSTRUCTIONS.txt
releases/windows/: BUILD_INSTRUCTIONS.txt
scripts/: build-linux.sh  build-macos.sh  build-windows.ps1
src-tauri/: Cargo.toml  com.kognitlabs.usbwriter.policy  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  disk.rs  error.rs  main.rs  writer.rs
ui/: index.html  package-lock.json  package.json
ui/src/: main.js  styles.css
