[package]
name = "kognit-usb-writer"
version = "1.0.0"
description = "Kognit Labs Windows 11 Bootable USB Writer"
authors = ["Kognit Labs"]
edition = "2021"
license = "MIT"
repository = "https://github.com/kognitlabs/usb-writer"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-os = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
humansize = "2"
uuid = { version = "1", features = ["v4"] }

# Cross-platform disk utilities
sysinfo = "0.31"

# Windows-specific
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Ioctl",
    "Win32_System_IO",
    "Win32_Security",
] }

# Unix (Linux/macOS)
[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["fs", "ioctl"] }
libc = "0.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
